css/misc.scss
body {
    background-color: #F6F6F6;
    margin: 0 auto;
	margin-top: 90px;
    font-size: 20px;
}

.wrap {
    margin: 0 auto;
    max-width: 700px;
    background: #FFF;
    overflow: hidden;
    
    img {
        display: block;
        margin: 0 auto;
        padding: 20px;
    }
}

.about {
    background-color: #fff;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    border-bottom: 2px solid #d8d8d8;
    border-left: 1px solid #d8d8d8;
    border-right: 1px solid #d8d8d8;
    border-top: 5px solid #7a7a7a;
    margin-bottom: 20px;
    padding: 15px;
    font-size: 26px;
    padding-left: 25px;
	padding-right: 25px;
	text-align: center;
    font-weight: 300;
}

ul.posts {
    list-style-type: none;
	padding: 0;
    text-align: justify;
    
	/* The below is abysmal, feel shameful + rewrite when you can */
	li {
        padding: 25px 15px 25px 15px;
        border-bottom: 1px solid #e0e0e0;
        
        &:first-child {
            padding-top: 1px;   
        }
        
        a {
            color: black;
        }
        
        p {
            a {
		        color: black;
		
		        &:hover {
                    transition: .2s ease;
			        text-decoration: underline;
			        color: $dark-blue;
		        }
            }
        }
    }
}

.bloghead {
    background: #F6F6F6;
    padding: 0px 20px 20px 20px;
    text-align: center;
}

.footer {
    font-size: 15px;
    text-align: center;
    background: #F6F6F6;
    padding: 15px;
    
    p {
        margin: 0; 
        display: inline-block;   
    }
}

@media #{$break-small} {
	
	body {
        margin-top: 100px;
        font-size: 18px;
    }
    
}

